# CodeSomething

./: README.md
CCSD/: CMakeLists.txt  Main.cpp
CCSD/Jaro-Winkler/: JaroSimilarity.cpp  JaroSimilarity.h
CCSD/Levenshtein/: Levenshtein.cpp  Levenshtein.h
ContactProjectDemo/contactapi/: build.gradle
ContactProjectDemo/contactapi/src/main/resources/: application.properties
Lab211/: product.txt
Lab211/Lab1P0025/src/application/: Main.java
Lab211/Lab1P0025/src/application/ui/: Menu.java  ProductManagement.java  ReportManagement.java  WarehouseManagement.java
Lab211/Lab1P0025/src/application/utilities/: DataIOHelper.java
Lab211/Lab1P0025/src/business/entities/: Item.java  Product.java  Receipt.java
Lab211/Lab1P0025/src/business/services/: ItemService.java  ProductService.java
Lab211/Lab1P0025/src/business/utilities/: DataValidation.java  DateUtils.java  ProductType.java
Lab211/Lab1P0025/src/data/dao/product/: IProductDao.java  ProductDao.java
Lab211/Lab1P0025/src/data/managers/: FileManager.java  IFileManager.java
Lab211/Lab1P0025/src/data/repositories/: IProductRepository.java  ProductRepository.java
Lab211/Lab2P0026/src/application/: Main.java
Lab211/Lab2P0026/src/application/ui/: FlightManagement.java
Lab211/Lab2P0026/src/business/entity/: Flight.java  ReservationFlight.java
Lab211/Lab2P0026/src/business/service/: AirlineServiceImpl.java  IAirlineService.java
Lab211/Lab2P0026/src/data/dao/: FlightDaoImpl.java  IFlightDao.java  IReservationDao.java  ReservationDaoImpl.java
Web/react-learn/react-essentials/src/components/: TabButton.jsx
(+10 files in other folders)
